--- a/CPClient/src/main/java/mainUI/Login.css
+++ b/CPClient/src/main/java/mainUI/Login.css
@@ -1,9 +1,13 @@
-.loginBtn:hover {
+.button {
+	-fx-background-radius: 50;
+	-fx-background-color: #FFD2D2;
+}
+.button:hover {
     -fx-text-fill: white;
     -fx-border-color: rgba(255, 255, 255, 0.8);
 }
 
-.loginBtn:pressed {
+.button:pressed {
     -fx-text-fill: rgba(255, 255, 255, 0.8);
     -fx-border-color: rgba(255, 255, 255, 0.8);
     -fx-effect: dropshadow(gaussian, rgba(0, 200, 220, 0.4), 2, 0.5, 0, 1);
