--- a/CPClient/src/main/java/saleUI/SaleDraft.fxml
+++ b/CPClient/src/main/java/saleUI/SaleDraft.fxml
@@ -33,10 +33,10 @@
       </Pane>
       <Pane layoutX="214.0" layoutY="123.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
          <children>
-            <Label layoutX="33.0" layoutY="11.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-            <Label layoutX="65.0" layoutY="20.0" text="我的销售草稿单" textFill="#9f353a">
+            <Label layoutX="35.0" layoutY="14.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
+            <Label layoutX="67.0" layoutY="23.0" text="销售草稿单">
                <font>
-                  <Font size="16.0" />
+                  <Font size="18.0" />
                </font>
             </Label>
             <TextField layoutX="656.0" layoutY="78.0" style="-fx-border-radius: 23; -fx-background-radius: 23;" />
@@ -84,7 +84,7 @@
             <Label layoutX="226.0" layoutY="21.0" text="订单编号:XSD-yyyyMMdd-xxxxx" textFill="#000000a1" />
             <Label layoutX="448.0" layoutY="21.0" />
             <Label layoutX="457.0" layoutY="21.0" text="订单日期:2017-10-25" textFill="#000000a1" />
-            <Label layoutX="232.0" layoutY="55.0" text="客户名字" textFill="#9f353a">
+            <Label layoutX="232.0" layoutY="55.0" text="客户名字">
                <font>
                   <Font size="18.0" />
                </font>
@@ -119,7 +119,7 @@
          <children>
             <Label layoutX="226.0" layoutY="20.0" text="订单编号:XSD-yyyyMMdd-xxxxx" textFill="#000000a1" />
             <Label layoutX="462.0" layoutY="20.0" text="订单日期:2017-10-25" textFill="#000000a1" />
-            <Label layoutX="234.0" layoutY="53.0" text="客户名字" textFill="#9f353a">
+            <Label layoutX="234.0" layoutY="53.0" text="客户名字">
                <font>
                   <Font size="18.0" />
                </font>
