--- a/CPClient/src/main/java/saleUI/SaleLook.fxml
+++ b/CPClient/src/main/java/saleUI/SaleLook.fxml
@@ -33,10 +33,10 @@
       </Pane>
       <Pane layoutX="214.0" layoutY="123.0" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;">
          <children>
-            <Label layoutX="33.0" layoutY="11.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-            <Label layoutX="54.0" layoutY="20.0" text="我的销售单" textFill="#9f353a">
+            <Label layoutX="34.0" layoutY="14.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
+            <Label layoutX="55.0" layoutY="23.0" text="销售单">
                <font>
-                  <Font size="16.0" />
+                  <Font size="18.0" />
                </font>
             </Label>
             <Button layoutX="25.0" layoutY="78.0" mnemonicParsing="false" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #9f353a;" text="全部" textFill="#9f353a" />
@@ -49,21 +49,21 @@
                </font>
             </Label>
          </children></Pane>
-      <VBox layoutX="13.0" layoutY="74.0" prefHeight="730.0" prefWidth="122.0" style="-fx-background-color: #ff7575;">
+      <VBox layoutX="13.0" layoutY="74.0" prefHeight="729.0" prefWidth="128.0" style="-fx-background-color: #ff7575;">
          <children>
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
-            <Button fx:id="newBtn" mnemonicParsing="false" onAction="#onNewBtnClicked" prefHeight="55.0" prefWidth="123.0" style="-fx-background-color: transparant;" text="新建" textFill="#9f353a">
+            <Button fx:id="newBtn" mnemonicParsing="false" onAction="#onNewBtnClicked" prefHeight="62.0" prefWidth="130.0" style="-fx-background-color: transparant;" text="新建" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="123.0" style="-fx-background-color: #C48888;" text="查看" textFill="#a15858">
+            <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="128.0" style="-fx-background-color: #C48888;" text="查看" textFill="#a15858">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="草稿" textFill="#9f353a">
+            <Button mnemonicParsing="false" prefHeight="70.0" prefWidth="134.0" style="-fx-background-color: transparant;" text="草稿" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
@@ -87,7 +87,7 @@
             <Label layoutX="261.0" layoutY="21.0" text="订单编号:XSD-yyyyMMdd-xxxxx" textFill="#000000a1" />
             <Label layoutX="483.0" layoutY="21.0" />
             <Label layoutX="492.0" layoutY="21.0" text="订单日期:2017-10-25" textFill="#000000a1" />
-            <Label layoutX="267.0" layoutY="55.0" text="客户名字" textFill="#9f353a">
+            <Label layoutX="267.0" layoutY="55.0" text="客户名字">
                <font>
                   <Font size="18.0" />
                </font>
@@ -122,7 +122,7 @@
          <children>
             <Label layoutX="265.0" layoutY="32.0" text="订单编号:XSD-yyyyMMdd-xxxxx" textFill="#000000a1" />
             <Label layoutX="498.0" layoutY="32.0" text="订单日期:2017-10-25" textFill="#000000a1" />
-            <Label layoutX="270.0" layoutY="65.0" text="客户名字" textFill="#9f353a">
+            <Label layoutX="270.0" layoutY="65.0" text="客户名字">
                <font>
                   <Font size="18.0" />
                </font>
