--- a/CPClient/src/main/java/saleUI/SaleNew.fxml
+++ b/CPClient/src/main/java/saleUI/SaleNew.fxml
@@ -108,7 +108,7 @@
                         <TextField layoutX="162.0" layoutY="53.0" opacity="0.65" />
                      </children>
                   </Pane>
-                  <Button layoutX="684.0" layoutY="543.0" mnemonicParsing="false" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #a15858;" text="提交" textFill="#9f353a">
+                  <Button layoutX="684.0" layoutY="544.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #a15858;" text="提交" textFill="#9f353a">
                      <font>
                         <Font size="14.0" />
                      </font>
