--- a/CPClient/src/main/java/saleUI/Sale.fxml
+++ b/CPClient/src/main/java/saleUI/Sale.fxml
@@ -65,7 +65,7 @@
             </Button>
          </children>
       </VBox>
-      <Circle fill="#ab453a" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="BLACK" strokeMiterLimit="0.0" strokeWidth="0.0">
+      <Circle fill="#5cfeff99" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="BLACK" strokeMiterLimit="0.0" strokeWidth="0.0">
          <effect>
             <DropShadow blurType="GAUSSIAN" color="#c74242cf" height="0.0" radius="6.2675" width="27.07" />
          </effect>
