--- a/CPClient/src/main/java/saleUI/SaleDraft.fxml
+++ b/CPClient/src/main/java/saleUI/SaleDraft.fxml
@@ -60,7 +60,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="123.0" style="-fx-background-color: #C48888;" text="草稿" textFill="#a15858">
+            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="123.0" style="-fx-background-color: #C48888;" text="草稿" textFill="#b15d5d">
                <font>
                   <Font size="18.0" />
                </font>
@@ -74,7 +74,7 @@
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
          </children>
       </VBox>
-      <Circle fill="#ab453a" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="BLACK" strokeMiterLimit="0.0" strokeWidth="0.0">
+      <Circle fill="#5cfeff99" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="#fffafc" strokeMiterLimit="0.0" strokeWidth="0.0">
          <effect>
             <DropShadow blurType="GAUSSIAN" color="#c74242cf" height="0.0" radius="6.2675" width="27.07" />
          </effect>
@@ -91,8 +91,8 @@
             </Label>
             <Button layoutX="812.0" layoutY="14.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="83.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="草稿" textFill="WHITE" />
             <Label layoutX="232.0" layoutY="93.0" text="护眼台灯*1" textFill="#57938b" />
-            <Label layoutX="310.0" layoutY="93.0" text="水晶灯*1" textFill="#57938b" />
-            <Label layoutX="370.0" layoutY="93.0" text="节能灯*1" textFill="#57938b" />
+            <Label layoutX="322.0" layoutY="92.0" text="水晶灯*1" textFill="#57938b" />
+            <Label layoutX="396.0" layoutY="92.0" text="节能灯*1" textFill="#57938b" />
             <Label layoutX="232.0" layoutY="135.0" text="¥2350" textFill="#e12121">
                <font>
                   <Font name="AdobeHebrew-Regular" size="24.0" />
