--- a/CPClient/src/main/java/saleUI/SaleLook.fxml
+++ b/CPClient/src/main/java/saleUI/SaleLook.fxml
@@ -77,7 +77,7 @@
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
          </children>
       </VBox>
-      <Circle fill="#ab453a" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="BLACK" strokeMiterLimit="0.0" strokeWidth="0.0">
+      <Circle fill="#5cfeff99" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="BLACK" strokeMiterLimit="0.0" strokeWidth="0.0">
          <effect>
             <DropShadow blurType="GAUSSIAN" color="#c74242cf" height="0.0" radius="6.2675" width="27.07" />
          </effect>
@@ -94,8 +94,8 @@
             </Label>
             <Button layoutX="812.0" layoutY="14.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="83.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="审核通过" textFill="WHITE" />
             <Label layoutX="267.0" layoutY="93.0" text="护眼台灯*1" textFill="#57938b" />
-            <Label layoutX="349.0" layoutY="92.0" text="水晶灯*1" textFill="#57938b" />
-            <Label layoutX="421.0" layoutY="92.0" text="节能灯*1" textFill="#57938b" />
+            <Label layoutX="359.0" layoutY="92.0" text="水晶灯*1" textFill="#57938b" />
+            <Label layoutX="431.0" layoutY="92.0" text="节能灯*1" textFill="#57938b" />
             <Label layoutX="267.0" layoutY="135.0" text="¥2350" textFill="#e12121">
                <font>
                   <Font name="AdobeHebrew-Regular" size="24.0" />
