--- a/CPClient/src/main/java/saleUI/SaleLook.fxml
+++ b/CPClient/src/main/java/saleUI/SaleLook.fxml
@@ -42,6 +42,8 @@
             <Button layoutX="25.0" layoutY="78.0" mnemonicParsing="false" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #9f353a;" text="全部" textFill="#9f353a" />
             <Button layoutX="94.0" layoutY="78.0" mnemonicParsing="false" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #9f353a;" text="审核通过" textFill="#9f353a" />
             <Button layoutX="192.0" layoutY="78.0" mnemonicParsing="false" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #9f353a;" text="审核未通过" textFill="#9f353a" />
+            <TextField layoutX="625.0" layoutY="79.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" />
+            <Button layoutX="812.0" layoutY="79.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="83.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="查询" textFill="WHITE" />
          </children></Pane>
       <VBox layoutX="13.0" layoutY="74.0" prefHeight="729.0" prefWidth="128.0" style="-fx-background-color: #ff7575;">
          <children>
@@ -89,7 +91,7 @@
             <Button layoutX="812.0" layoutY="14.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="83.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="审核通过" textFill="WHITE" />
             <Label layoutX="267.0" layoutY="93.0" text="护眼台灯*1" textFill="#57938b" />
             <Label layoutX="359.0" layoutY="92.0" text="水晶灯*1" textFill="#57938b" />
-            <Label layoutX="431.0" layoutY="92.0" text="节能灯*1" textFill="#57938b" />
+            <Label layoutX="435.0" layoutY="92.0" text="节能灯*1" textFill="#57938b" />
             <Label layoutX="267.0" layoutY="135.0" text="¥2350" textFill="#e12121">
                <font>
                   <Font name="AdobeHebrew-Regular" size="24.0" />
