--- a/CPClient/src/main/java/ui/saleUI/Sale.css
+++ b/CPClient/src/main/java/ui/saleUI/Sale.css
@@ -12,3 +12,9 @@
 .button:pressed {
     -fx-background-color: rgba(211, 211, 211, 0.5);
 }
+.menuitem {
+	-fx-background-color: rgba(255, 255, 255, 0.4);
+    -fx-effect: dropshadow(gaussian, rgba(0, 233, 222, 0.2), 5, 5, 0, 0);
+    -fx-border-radius: 23;
+    -fx-background-radius: 23;
+}
