--- a/CPClient/src/main/java/ui/userUI/User.fxml
+++ b/CPClient/src/main/java/ui/userUI/User.fxml
@@ -19,11 +19,6 @@
                   <Font name="System Bold Italic" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="1084.0" layoutY="13.0" text="消息" textFill="#9f353a">
-               <font>
-                  <Font name="System Bold Italic" size="18.0" />
-               </font>
-            </Label>
             <Label layoutX="1136.0" layoutY="13.0" text="注销" textFill="#9f353a">
                <font>
                   <Font name="System Bold Italic" size="18.0" />
@@ -35,7 +30,7 @@
          <children>
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparant;" textFill="#9f353a" />
-            <Button fx:id="newBtn" mnemonicParsing="false" onAction="#onNewBtnClicked" prefHeight="55.0" prefWidth="123.0" style="-fx-background-color: #C48888;" text="新建" textFill="#a15858">
+            <Button fx:id="newBtn" mnemonicParsing="false" onAction="#onNewBtnClicked" prefHeight="55.0" prefWidth="123.0" style="-fx-background-color: transparent;" text="新建" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
@@ -55,7 +50,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="59.0" prefWidth="127.0" style="-fx-background-color: transparant;" text="个人" textFill="#9f353a">
+            <Button fx:id="newBtn1" mnemonicParsing="false" onAction="#onNewBtnClicked" prefHeight="55.0" prefWidth="123.0" style="-fx-background-color: #C48888;" text="个人" textFill="#a15858">
                <font>
                   <Font size="18.0" />
                </font>
@@ -72,7 +67,7 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="672.0" prefWidth="920.0" style="-fx-background-color: #FFB5B5;">
                <children>
                   <Label layoutX="89.0" layoutY="39.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-                  <Label layoutX="116.0" layoutY="46.0" text="销售单">
+                  <Label layoutX="116.0" layoutY="46.0" text="个人信息">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -82,44 +77,24 @@
                         <Separator layoutX="128.0" layoutY="67.0" opacity="0.0" orientation="VERTICAL" prefHeight="538.0" prefWidth="10.0" />
                         <VBox layoutX="-3.0" layoutY="2.0" prefHeight="579.0" prefWidth="136.0">
                            <children>
-                              <Label prefHeight="45.0" prefWidth="145.0" text="客户" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" text="操作员" textAlignment="CENTER" textFill="#938c8c" />
-                              <Label prefHeight="53.0" prefWidth="136.0" text="商品列表" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" textFill="#938c8c" />
-                              <Label prefHeight="59.0" prefWidth="131.0" textFill="#938c8c" />
-                              <Label prefHeight="59.0" prefWidth="131.0" textFill="#938c8c" />
-                              <Label prefHeight="59.0" prefWidth="131.0" textFill="#938c8c" />
-                              <Label prefHeight="59.0" prefWidth="131.0" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" text="优惠策略" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" text="总价" textFill="#938c8c" />
+                              <Label prefHeight="45.0" prefWidth="145.0" text="姓名" textFill="#938c8c" />
+                              <Label prefHeight="45.0" prefWidth="145.0" text="联系电话" textAlignment="CENTER" textFill="#938c8c" />
+                              <Label prefHeight="45.0" prefWidth="145.0" text="原密码" textAlignment="CENTER" textFill="#938c8c" />
+                              <Label prefHeight="45.0" prefWidth="145.0" text="新密码" textAlignment="CENTER" textFill="#938c8c" />
                            </children>
                         </VBox>
                         <TextField layoutX="162.0" layoutY="14.0" opacity="0.65" />
                         <TextField layoutX="541.0" layoutY="55.0" opacity="0.61" />
-                        <TableView layoutX="160.0" layoutY="210.0" opacity="0.68" prefHeight="226.0" prefWidth="458.0" style="-fx-background-color: #FFB5B5;">
-                          <columns>
-                              <TableColumn prefWidth="93.0" text="商品" />
-                            <TableColumn prefWidth="92.0" text="单价" />
-                              <TableColumn prefWidth="94.0" text="数量" />
-                              <TableColumn prefWidth="90.0" text="小计" />
-                              <TableColumn prefWidth="87.0" text="操作" />
-                          </columns>
-                        </TableView>
-                        <Button layoutX="160.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="总额促销" textFill="#fff7fb" />
-                        <Button layoutX="243.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="满减促销" textFill="#fff7fb" />
-                        <Button layoutX="327.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="节日促销" textFill="#fff7fb" />
-                        <Button layoutX="414.0" layoutY="436.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="折让促销" textFill="#fff7fb" />
+                        <Button layoutX="361.0" layoutY="137.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="修改密码" textFill="#fff7fb" />
                         <TextField layoutX="162.0" layoutY="53.0" opacity="0.65" />
-                        <Label layoutX="414.0" layoutY="5.0" prefHeight="45.0" prefWidth="145.0" text="仓库" textFill="#938c8c" />
+                        <Label layoutX="414.0" layoutY="5.0" prefHeight="45.0" prefWidth="145.0" text="编号" textFill="#938c8c" />
                         <TextField layoutX="541.0" layoutY="14.0" opacity="0.65" />
-                        <Label layoutX="414.0" layoutY="44.0" prefHeight="45.0" prefWidth="145.0" text="日期" textFill="#938c8c" />
-                        <Button layoutX="160.0" layoutY="113.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="商品分类" textFill="#fff7fb" />
-                        <Button layoutX="160.0" layoutY="171.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="商品名称" textFill="#fff7fb" />
-                        <TextField layoutX="254.0" layoutY="171.0" opacity="0.65" />
-                        <ComboBox layoutX="254.0" layoutY="113.0" prefHeight="26.0" prefWidth="168.0" />
+                        <Label layoutX="414.0" layoutY="44.0" prefHeight="45.0" prefWidth="145.0" text="权限" textFill="#938c8c" />
+                        <TextField layoutX="162.0" layoutY="97.0" opacity="0.65" />
+                        <TextField layoutX="162.0" layoutY="137.0" opacity="0.65" />
                      </children>
                   </Pane>
-                  <Button layoutX="730.0" layoutY="609.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #a15858;" text="提交" textFill="#9f353a">
+                  <Button layoutX="730.0" layoutY="609.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #a15858;" text="保存" textFill="#9f353a">
                      <font>
                         <Font size="14.0" />
                      </font>
