--- a/CPClient/src/main/java/ui/systemAdministerUI/user.fxml
+++ b/CPClient/src/main/java/ui/systemAdministerUI/user.fxml
@@ -72,33 +72,35 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Pane layoutX="89.0" layoutY="98.0" prefHeight="578.0" prefWidth="722.0">
+                  <Pane layoutX="89.0" layoutY="94.0" prefHeight="578.0" prefWidth="722.0">
                      <children>
                         <Separator layoutX="128.0" layoutY="67.0" opacity="0.0" orientation="VERTICAL" prefHeight="538.0" prefWidth="10.0" />
-                        <VBox layoutX="-3.0" layoutY="2.0" prefHeight="579.0" prefWidth="136.0">
-                           <children>
-                              <Label prefHeight="45.0" prefWidth="145.0" text="姓名" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" text="联系电话" textAlignment="CENTER" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" text="原密码" textAlignment="CENTER" textFill="#938c8c" />
-                              <Label prefHeight="45.0" prefWidth="145.0" text="新密码" textAlignment="CENTER" textFill="#938c8c" />
-                           </children>
-                        </VBox>
+                        <Label prefHeight="45.0" prefWidth="145.0" text="姓名" textFill="#938c8c" />
+                        <Label layoutY="45.0" prefHeight="45.0" prefWidth="145.0" text="分类" textFill="#938c8c" />
+                        <Label layoutY="88.0" prefHeight="45.0" prefWidth="145.0" text="电话" textAlignment="CENTER" textFill="#938c8c" />
+                        <Label layoutY="133.0" prefHeight="45.0" prefWidth="145.0" text="地址" textAlignment="CENTER" textFill="#938c8c" />
+                        <Label layoutY="176.0" prefHeight="45.0" prefWidth="145.0" text="电子邮箱" textAlignment="CENTER" textFill="#938c8c" />
                         <TextField layoutX="162.0" layoutY="14.0" opacity="0.65" />
                         <TextField layoutX="541.0" layoutY="55.0" opacity="0.61" />
-                        <Button layoutX="361.0" layoutY="137.0" mnemonicParsing="false" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="修改密码" textFill="#fff7fb" />
-                        <TextField layoutX="162.0" layoutY="53.0" opacity="0.65" />
+                        <TextField layoutX="162.0" layoutY="55.0" opacity="0.65" />
                         <Label layoutX="414.0" layoutY="5.0" prefHeight="45.0" prefWidth="145.0" text="编号" textFill="#938c8c" />
                         <TextField layoutX="541.0" layoutY="14.0" opacity="0.65" />
                         <Label layoutX="414.0" layoutY="44.0" prefHeight="45.0" prefWidth="145.0" text="权限" textFill="#938c8c" />
                         <TextField layoutX="162.0" layoutY="97.0" opacity="0.65" />
-                        <TextField layoutX="162.0" layoutY="137.0" opacity="0.65" />
+                        <TextField layoutX="162.0" layoutY="142.0" opacity="0.65" />
+                        <TextField layoutX="541.0" layoutY="97.0" opacity="0.61" />
+                        <Label layoutX="414.0" layoutY="88.0" prefHeight="45.0" prefWidth="145.0" text="密码" textAlignment="CENTER" textFill="#938c8c" />
+                        <Label layoutX="414.0" layoutY="133.0" prefHeight="45.0" prefWidth="145.0" text="邮编" textAlignment="CENTER" textFill="#938c8c" />
+                        <TextField layoutX="541.0" layoutY="142.0" opacity="0.61" />
+                        <TextField layoutX="162.0" layoutY="185.0" opacity="0.65" />
                      </children>
                   </Pane>
-                  <Button layoutX="730.0" layoutY="609.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #a15858;" text="保存" textFill="#9f353a">
+                  <Button layoutX="735.0" layoutY="610.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="66.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-border-color: #a15858;" text="保存" textFill="#9f353a">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
+                  <Button layoutX="754.0" layoutY="56.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="57.0" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="修改" textFill="#fff7fb" />
                </children>
             </AnchorPane>
         </content>
