--- a/CPClient/src/main/java/ui/stockmanUI/Store.fxml
+++ b/CPClient/src/main/java/ui/stockmanUI/Store.fxml
@@ -58,11 +58,6 @@
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单        据         3" />
                </items>
             </MenuButton>
-            <Button mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="草稿" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
             <MenuButton mnemonicParsing="false" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      商品" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
@@ -73,12 +68,16 @@
                   <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="单        据         3" />
                </items>
             </MenuButton>
-            <Button mnemonicParsing="false" prefHeight="59.0" prefWidth="127.0" style="-fx-background-color: transparant;" text="消息" textFill="#9f353a">
+            <MenuButton mnemonicParsing="false" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      个人" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="59.0" prefWidth="127.0" style="-fx-background-color: transparant;" text="个人" textFill="#9f353a">
+               <items>
+                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparant;" text="消息" />
+                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="个人信息" />
+               </items>
+            </MenuButton>
+            <Button mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparant;" text="草稿" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
