--- a/CPClient/src/main/java/mainUI/Login.fxml
+++ b/CPClient/src/main/java/mainUI/Login.fxml
@@ -15,17 +15,6 @@
             <Image url="@loginBg3.jpg" />
          </image>
       </ImageView>
-      <PasswordField fx:id="passwordTxt" layoutX="260.0" layoutY="293.0" />
-      <TextField fx:id="usernameTxt" layoutX="260.0" layoutY="240.0" style="-fx-background-radius: 0.5;" />
-      <Label layoutX="174.0" layoutY="240.0" text="用户名">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font></Label>
-      <Label layoutX="183.0" layoutY="295.0" text="密码">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
       <Label layoutX="264.0" layoutY="86.0" text="登录">
          <font>
             <Font size="36.0" />
@@ -40,11 +29,25 @@
                </stops>
             </LinearGradient>
          </textFill>
+      </Label>      
+      <Label layoutX="98.0" layoutY="242.0" text="用户名">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Label layoutX="107.0" layoutY="295.0" text="密码">
+         <font>
+            <Font size="18.0" />
+         </font>
       </Label>
-      <Button fx:id="loginBtn" layoutX="265.0" layoutY="344.0" mnemonicParsing="false" onAction="#onLoginBtnClicked" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" text="Log In">
+      <Button fx:id="loginBtn" layoutX="192.0" layoutY="343.0" mnemonicParsing="false" onAction="#onLoginBtnClicked" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 23; -fx-border-radius: 23;" text="Log In">
          <font>
             <Font name="Helvetica" size="14.0" />
          </font>
       </Button>
+      <TextField fx:id="usernameTxt" layoutX="182.0" layoutY="240.0" style="-fx-background-radius: 0.5;" />
+      <PasswordField fx:id="passwordTxt" layoutX="181.0" layoutY="293.0" />
+      <Label fx:id="usernameLabel" layoutX="377.0" layoutY="240.0" prefHeight="27.0" prefWidth="167.0" text="" />
+      <Label fx:id="passwordLabel" layoutX="377.0" layoutY="293.0" prefHeight="27.0" prefWidth="167.0" text="" />
+      <Button fx:id="signupBtn" layoutX="307.0" layoutY="343.0" mnemonicParsing="false" text="Sign Up" />
    </children>
 </AnchorPane>
